--- a/themes/personalTheme/src/sass/main.scss
+++ b/themes/personalTheme/src/sass/main.scss
@@ -1,5 +1,8 @@
+body{
+    font-family: "Fira Code", monospace;
+}
 .main-div{
     width: 100vw;
     height: 100vh;
-    background-color: red;
+    
 }
