--- a/themes/personalTheme/src/sass/main.scss
+++ b/themes/personalTheme/src/sass/main.scss
@@ -1,5 +1,6 @@
 body{
     font-family: "Fira Code", monospace;
+    background-color: rgba(128, 128, 128, 0.646);
 }
 .terminal{
     width: 100vw;
